--- a/_posts/Devops/2022-07-12-AWS-EC2.md
+++ b/_posts/Devops/2022-07-12-AWS-EC2.md
@@ -49,9 +49,9 @@ tags: AWS Devops EC2
 
 
 #### It is important to know the pricing techniques 
-<img src="../images/EC2_Pricing.png" />
+<img src="/images/EC2_Pricing.png" />
 - here is an example 
-<img src="../images/pricing_example.png" />
+<img src="/images/pricing_example.png" />
 
 #### troubleshooting
   - if you have timeout &rarr; you can think about the security group 
