--- a/_posts/Devops/2022-07-12-AWS-EC2.md
+++ b/_posts/Devops/2022-07-12-AWS-EC2.md
@@ -45,7 +45,7 @@ tags: AWS Devops EC2
 
 #### script to run machine with apache 
 [there is how to run it](/includes/2022/07/13/script_to_run_vm_with_apache)
-{% include  ./includes/2022-07-13-script_to_run_vm_with_apache.md foo='[github](https://github.com)' %}
+{% include  includes/2022-07-13-script_to_run_vm_with_apache.md foo='[github](https://github.com)' %}
 
 
 #### It is important to know the pricing techniques 
