--- a/_posts/2022-07-14-Apache.md
+++ b/_posts/2022-07-14-Apache.md
@@ -1,2 +1,9 @@
+---
+layout: post
+title: Apache
+author: Faten Elhariry
+categories: Devops
+tags: AWS Devops EC2
+---
 #### install it in linux 
 <img src="/images/Apache-install.png" />
