--- a/_posts/2022-07-15-DP.md
+++ b/_posts/2022-07-15-DP.md
@@ -1,6 +1,9 @@
 ---
 layout: post
-title: Design pattern Short notes 
+title: Design pattern Short notes
+author: Faten Elhariry
+categories: Dev
+tags: Design pattern, Dev
 ---
 
 #### What is class explosion?
