--- a/_posts/sentimentAnalysis/2022-07-20-intro.md
+++ b/_posts/sentimentAnalysis/2022-07-20-intro.md
@@ -15,8 +15,28 @@ tags: NLP, Sentiment Analysis
     **Alternative names**: _Opinion Mining, Sentiment Mining, and Subjectivity Analysis_.
   - We can broadly divide the problems in sentiment analysis into 3 categories :
     1. Text Polarity refers to identifying sentiment orientation of the text
+       Here we are more interested in the overall orientation of the text i.e. whether it is positive or negative. Due to the free structure of text, there are many tricky cases which are hard to solve .
+
     2. Sentiment rating gives a numerical rank, say from 1 to 5 for text
-    3. Aspect based Sentiment Analysis determines the sentiment towards specific aspects in text.
+       Ranking the sentiment of the text provides more granularity. Here, I want to assign a numerical score to the sentiment within a range. 
+    3. Aspect based Sentiment Analysis determines the sentiment towards specific aspects in text. **(ABSA)**
+       it’s not enough to say whether a text has a “positive” or a “negative” sentiment. Maybe you want to know more than whether people are talking with a positive, neutral, or negative polarity about the product, but also which particular aspects or features of the product people talk about.
+      - **ABSA is divided into three sub-tasks:** 
+        - Opinion Target Expression (OTE) 
+        - Aspect Category Detection (ACD)
+        - Sentiment Polarity (SP). 
+        _Even if there are three sub-tasks, most researchers only perform OTE and SP._
+        
+_You can use both supervised learning and unsupervised learning methods for your sentiment analysis._
+
+- **What is the factor that affect the sentiment anaylsis?**
+  1. Contextual understanding
+     critical for a system to be able to reach human-level accuracy.
+     For example: “I am craving McDonald’s so bad”.
+  2. Sentiment Ambiguity
+  3. Sarcasm
+    Obviously, this statement is negative, even though it has the positive word “happy”.
+  4. Comparatives
 
 
 - **References**
