--- a/_posts/sentimentAnalysis/2022-07-20-intro.md
+++ b/_posts/sentimentAnalysis/2022-07-20-intro.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "Introduction to Sentiment Analysis"
 author: Faten Elhariry
-categories: Sentiment Analysis
-tags: NLP, Sentiment Analysis
+categories: "Sentiment Analysis"
+tags: NLP, "Sentiment Analysis"
 ---
 
 #### Introduction 
