--- a/_posts/BookReview/2022-08-16-.md
+++ b/_posts/BookReview/2022-08-16-.md
@@ -34,5 +34,8 @@ this a quick review for [oreilly book](https://learning.oreilly.com/library/view
             - creation of a customer account, while another is notification.
 
         - **Aggregates and Aggregate Roots**
-          Not surprisingly, there can be multiple classes in a bounded context. There is a relationship between the classes based on dependency. 
+          Not surprisingly, there can be multiple classes in a bounded context. There is a relationship between the classes based on dependency. **This dependency may be due to inheritance or composition** 
+          - Each group of these classes is an Aggregate and the top-level class in an Aggregate Root.
+          <img src="/images/BookReview/1.png" /> 
+          <img src="/images/BookReview/2.png" /> 
 
