--- a/_posts/development/microService/2022-07-23-intro.md
+++ b/_posts/development/microService/2022-07-23-intro.md
@@ -18,3 +18,44 @@ _what we are going to develope_
 
 <img src="/images/dev/microservice/2.png" />
 _Application flow_
+
+
+#### what is microservice?
+  Microservices as an architectural style is a lightweight form of service-oriented architecture (SOA) where the services are each tightly focused on doing one thing and doing it well. A system with a microservices architecture is a distributed system with a (probably large) number of collaborating microservices.
+  are malleable, scalable, and robust, and they allow for systems that do well on all four of the key metrics
+  1. Deployment frequency
+  2. Lead time for changes
+  3. Time to restore service
+  4. Change failure rate
+  `a service with a very narrowly focused capability,`
+  #####  six core microservice characteristics
+    - A microservice is responsible for a single capability.
+    - A microservice is individually deployable.
+    - A microservice consists of one or more processes.
+    - A microservice owns its own data store.
+    - A small team can maintain a few handfuls of microservices.
+    - A microservice is replaceable.
+
+  ##### Why microservices?
+     they’re malleable, scalable, and robust, and they allow a short lead time from start of implementation to deployment to production. This adds up to doing well on all of the four key metrics outlined in Accelerate
+     - Enable continuous delivery
+      - Can be developed and modified quickly
+      - Can be comprehensively tested by automated tests
+      - Can be deployed independently
+      - Can be operated efficiently
+      - **What is continuous delivery?**
+        - where the team ensures that the software can always be deployed to production quickly at any time
+     - Allow for an efficient developer workflow because they’re highly maintainable **High level of maintainability**
+      - Because every microservice handles a single capability, microservices are by nature fairly small, both in their scope and in the size of their codebase. The simplicity that follows from this limited scope is a major benefit. When developing microservices, it’s important to avoid complicating their codebase by using large, complicated frameworks, libraries, or products because you think you may need their functionality in the future.
+     - Are robust by design **Robust and scalable**
+       distributed architecture allows you to scale out each microservice individually, based on where bottlenecks occur
+     - Costs and downsides of microservices
+#### Greenfield vs brownfield 
+  - **needs to build microservice** 
+    1. Is the system’s scope large enough to justify the complexity of a distributed architecture?
+    2. Is the system’s scope large enough to justify the cost of building the deployment automation?
+    3. Would this system benefit from the ability to deploy subsystems separately?
+    4. Can you build sufficient deployment automation?
+    5. Are you sufficiently knowledgeable about the domain to properly identify and separate the system’s various independent business capabilities?
+    6. Will the project survive long enough to recover the up-front investment in automation and distribution?
+  
