- reference to url rewrite

--- a/_posts/IIS/20-04-2025-IIS.md
+++ b/_posts/IIS/20-04-2025-IIS.md
@@ -10,4 +10,4 @@ tags: IIS Devops
 ### Internet Information Server 
 - [intro](./intro.md)
 - [other topics](./defaultDocument.md)
-- [URL Rewrite][./URL rewrite.md]
+- [URL Rewrite](./URL_rewrite.md)
