--- a/_posts/IIS/2025-04-25-IIS.md
+++ b/_posts/IIS/2025-04-25-IIS.md
@@ -6,6 +6,6 @@ categories: Dev
 tags: IIS Dev
 ---
 ### Internet Information Server 
-- [intro](./intro.md)
-- [other topics](./defaultDocument.md)
+- [intro](intro.md)
+- [other topics](./2025-04-25-defaultDocument.md)
 - [URL Rewrite](./URL_rewrite.md)
