--- a/_posts/IIS/2025-04-25-IIS.md
+++ b/_posts/IIS/2025-04-25-IIS.md
@@ -2,11 +2,11 @@
 layout: post
 title: IIS
 author: Faten Elhariry
-permalink: /posts/IIS
+permalink: /posts/IIS/
 categories: Dev
 tags: IIS Dev
 ---
 ### Internet Information Server 
 - [intro](/intro.md)
-- [other topics](./2025-04-25-defaultDocument.md)
-- [URL Rewrite](./URL_rewrite.md)
+- [other topics](/2025-04-25-defaultDocument.md)
+- [URL Rewrite](/URL_rewrite.md)
