--- a/_posts/IIS/2025-04-25-IIS.md
+++ b/_posts/IIS/2025-04-25-IIS.md
@@ -8,5 +8,5 @@ tags: IIS Dev
 ---
 ### Internet Information Server 
 - [intro](/intro.md)
-- [other topics](/2025-04-25-defaultDocument.md)
+- [other topics](/posts/IIS/defaultDocument)
 - [URL Rewrite](/URL_rewrite.md)
