--- a/_posts/IIS/2025-04-25-IIS.md
+++ b/_posts/IIS/2025-04-25-IIS.md
@@ -7,6 +7,6 @@ categories: Dev
 tags: IIS Dev
 ---
 ### Internet Information Server 
-- [intro](/intro.md)
+- [intro](/posts/IIS/intro)
 - [other topics](/posts/IIS/defaultDocument)
-- [URL Rewrite](/URL_rewrite.md)
+- [URL Rewrite](/posts/IIS/URLRwrite)
