--- a/_posts/IIS/2025-04-25-intro.md
+++ b/_posts/IIS/2025-04-25-intro.md
@@ -6,7 +6,7 @@ permalink: /posts/IIS/intro
 ---
 ### performance 
 ##### debuge 
-![Performance Components](image-1.png)
+![Performance Components](/images/aws/image-1.png)
 
 - .Net compilation 
     1. Debug = False
@@ -17,8 +17,8 @@ permalink: /posts/IIS/intro
 
 
 ##### Security authontication 
-![Enable iis atuhontication features](image-2.png)
+![Enable iis atuhontication features](/images/aws/image-2.png)
 
 - Basic and Digest authontication are the same except for degist we have to a domain (AD) 
 > basic authontication is not encrypted   
-![Basic authontication](image-3.png)
+![Basic authontication](/images/aws/image-3.png)
