--- a/_posts/IIS/2025-04-25-IIS.md
+++ b/_posts/IIS/2025-04-25-IIS.md
@@ -9,4 +9,4 @@ tags: IIS Dev
 ### Internet Information Server 
 - [intro](/posts/IIS/intro)
 - [other topics](/posts/IIS/defaultDocument)
-- [URL Rewrite](/posts/IIS/URLRwrite)
+- [URL Rewrite](/posts/IIS/urlRewrite)
