--- a/_posts/IIS/2025-04-25-intro.md
+++ b/_posts/IIS/2025-04-25-intro.md
@@ -15,6 +15,9 @@ permalink: /posts/IIS/intro
         - enable client side debuging: False 
         - enable server side debuging: False
 
+##### recycle 
+- disable restarting 
+![image copy.png](/images/IIS/image copy.png)
 
 ##### Security authontication 
 ![Enable iis atuhontication features](/images/IIS/image-2.png)
